src/app/component/snapshots/jedit__app__component__workspace__test__render_large_preview_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                            ↑│"
"│> ├─ 0                   █││  2   "web-app": {                               █│"
"│  ├─ 1                   ║││  3     "servlet": [                             █│"
"│  ├─ 2                   ║││  4       {                                      █│"
"│  ├─ 3                   ║││  5         "servlet-name": "cofaxCDS",          ║│"
"│  ├─ ... (1017 hidden)   ║││  6         "servlet-class": "org.cofax.cds.CDSS ║│"
"│  ├─ 1021                ║││  7         "init-param": {                      ║│"
"│  ├─ 1022                ║││  8           "configGlossary:installationAt": " ║│"
"│  └─ 1023                ║││  9           "configGlossary:adminEmail": "ksm@ ║│"
"│                         ║││ 10           "configGlossary:poweredBy": "Cofax ║│"
"│                         ║││ 11           "configGlossary:poweredByIcon": "/ ║│"
"│                         ║││ 12           "configGlossary:staticPath": "/con ║│"
"│                         ║││ 13           "templateProcessorClass": "org.cof ║│"
"│                         ║││ 14           "templateLoaderClass": "org.cofax. ║│"
"│                         ║││ 15           "templatePath": "templates",       ║│"
"│                         ║││ 16           "templateOverridePath": "",        ║│"
"│                         ║││                                                 ↓│"
"│                         ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
