src/app/component/snapshots/jedit__app__component__workspace__test__render_large_preview_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│> root                   ↑││                                                  │"
"│  ├─ 0                   █││                                                  │"
"│  ├─ 1                   ║││                                                  │"
"│  ├─ 2                   ║││                                                  │"
"│  ├─ ... (1018 hidden)   ║││                                                  │"
"│  ├─ 1021                ║││                                                  │"
"│  ├─ 1022                ║││                                                  │"
"│  └─ 1023                ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││               Preview not available              │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
