src/app/component/snapshots/jedit__app__component__workspace__test__render_navigation_far_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 "articleTemplate.htm"                         │"
"│  └─ web-app             ║││                                                  │"
"│     ├─ servlet          ║││                                                  │"
"│     │  ├─ 0             ║││                                                  │"
"│     │  │  ├─ servlet-nam║││                                                  │"
"│     │  │  ├─ servlet-cla█││                                                  │"
"│     │  │  └─ init-param █││                                                  │"
"│     │  │     ├─ configGl█││                                                  │"
"│     │  │     ├─ configGl█││                                                  │"
"│     │  │     ├─ configGl║││                                                  │"
"│     │  │     ├─ ... (4 h║││                                                  │"
"│     │  │     ├─ template║││                                                  │"
"│     │  │     ├─ template║││                                                  │"
"│     │  │     ├─ defaultL║││                                                  │"
"│>    │  │     ├─ defaultF║││                                                  │"
"│     │  │     ├─ useJSP  ║││                                                  │"
"│     │  │     ├─ jspListT║││                                                  │"
"│     │  │     ├─ jspFileT↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
