src/app/component/snapshots/jedit__app__component__workspace__test__render_top_bottom_preview_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│> root                   ↑││  1 {                                            ↑│"
"│  └─ web-app             █││  2   "web-app": {                               █│"
"│     ├─ servlet          █││  3     "servlet": [                             █│"
"│     │  ├─ 0             █││  4       {                                      █│"
"│     │  │  ├─ servlet-nam█││  5         "servlet-name": "cofaxCDS",          ║│"
"│     │  │  ├─ servlet-cla║││  6         "servlet-class": "org.cofax.cds.CDSS ║│"
"│     │  │  └─ init-param ║││  7         "init-param": {                      ║│"
"│     │  │     ├─ configGl║││  8           "configGlossary:installationAt": " ║│"
"│     │  │     ├─ configGl║││  9           "configGlossary:adminEmail": "ksm@ ║│"
"│     │  │     ├─ configGl║││ 10           "configGlossary:poweredBy": "Cofax ║│"
"│     │  │     ├─ ... (36 ║││ 11           "configGlossary:poweredByIcon": "/ ║│"
"│     │  │     ├─ dataStor║││ 12           "configGlossary:staticPath": "/con ║│"
"│     │  │     ├─ dataStor║││ 13           "templateProcessorClass": "org.cof ║│"
"│     │  │     └─ maxUrlLe║││ 14           "templateLoaderClass": "org.cofax. ║│"
"│     │  ├─ 1             ║││ 15           "templatePath": "templates",       ║│"
"│     │  ├─ 2             ║││ 16           "templateOverridePath": "",        ║│"
"│     │  ├─ 3             ║││                                                 ↓│"
"│     │  └─ 4             ↓││←█████████████████████████══════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
