src/app/component/snapshots/jedit__app__component__workspace__test__render_top_bottom_preview_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│     ├─ servlet          ↑││  1 {                                             │"
"│     │  ├─ 0             ║││  2   "taglib-uri": "cofax.tld",                  │"
"│     │  │  ├─ servlet-nam║││  3   "taglib-location": "/WEB-INF/tlds/cofax.tl  │"
"│     │  │  ├─ servlet-cla║││  4 }                                             │"
"│     │  │  └─ init-param ║││                                                  │"
"│     │  │     ├─ configGl║││                                                  │"
"│     │  │     ├─ configGl║││                                                  │"
"│     │  │     ├─ configGl║││                                                  │"
"│     │  │     ├─ ... (36 ║││                                                  │"
"│     │  │     ├─ dataStor║││                                                  │"
"│     │  │     ├─ dataStor║││                                                  │"
"│     │  │     └─ maxUrlLe║││                                                  │"
"│     │  ├─ 1             ║││                                                  │"
"│     │  ├─ 2             █││                                                  │"
"│     │  ├─ 3             █││                                                  │"
"│     │  └─ 4             █││                                                  │"
"│     ├─ servlet-mapping  █││                                                  │"
"│>    └─ taglib           ↓││←█████████████████████████████████████████████══→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
