src/app/component/snapshots/jedit__app__component__workspace__test__render_top_bottom_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│     ├─ servlet                                                              ↑│"
"│     │  ├─ 0                                                                 ║│"
"│     │  │  ├─ servlet-name                                                   ║│"
"│     │  │  ├─ servlet-class                                                  ║│"
"│     │  │  └─ init-param                                                     ║│"
"│     │  │     ├─ configGlossary:installationAt                               ║│"
"│     │  │     ├─ configGlossary:adminEmail                                   ║│"
"│     │  │     ├─ configGlossary:poweredBy                                    ║│"
"│     │  │     ├─ ... (36 hidden)                                             ║│"
"│     │  │     ├─ dataStoreConnUsageLimit                                     ║│"
"│     │  │     ├─ dataStoreLogLevel                                           ║│"
"│     │  │     └─ maxUrlLength                                                ║│"
"│     │  ├─ 1                                                                 ║│"
"│     │  ├─ 2                                                                 █│"
"│     │  ├─ 3                                                                 █│"
"│     │  └─ 4                                                                 █│"
"│     ├─ servlet-mapping                                                      █│"
"│>    └─ taglib                                                               ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
